--- a/32.shell.html
+++ b/32.shell.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Styles:  Changing the Look of a Page</title>
+    <title>Styles:  Changing the Look of a Page!</title>
 
     <style>
         /*  Styles may be commented using containers */
@@ -14,7 +14,7 @@
                 */
         /*  The identifier may apply to all of the tags of specific type */
         i {
-            color: green;
+            color: purple;
             font-weight: bold;
         }
 
@@ -64,6 +64,15 @@
                 on the page my dictate when the script is executed in relation
                 to when the items on the page are added.
     </script>
+    <p>A few things that you may want to consider when working with a website.  A web url has important parts
+        <ul>
+        <li>Protocal (http</li>
+        <li>Address (copper.hungrybeagle.com)</li>
+        <li>Directory /</li>
+        <li>Filename /index.html</li>
+        </ul>
+        Example: http://copper.hungrybeagle.com/files/index.html
+    </p>
 
     <p id="myId">The body of your document is where you should put all of your container tags. Note
         that all of the formatting is dictated by html markup tags and the styles that
