--- a/32.shell.html
+++ b/32.shell.html
@@ -52,7 +52,9 @@
             font-family: Arial;
         }
 
-        body {}
+        body {
+            
+        }
     </style>
     <script>
     </script>
