--- a/32.shell.html
+++ b/32.shell.html
@@ -52,8 +52,9 @@
             font-family: Arial;
         }
 
-        body {
-            
+        body { 
+            background-color: rgba(148, 142, 142, 0.822)
+
         }
     </style>
     <script>
