--- a/32.shell.html
+++ b/32.shell.html
@@ -108,7 +108,7 @@
     <ol>
         <li>If you do not already have the Visual Studio Code extension "Beautify File" loaded,
             loaded it an install it. This will help make your code much more readable. There
-            are also a number of "live Preview" extensions that you may want to try out as well.
+            are also a number of "live Server" extensions that you may want to try out as well.
             This can save you switching tabs to go to a browser and reloading the browser page.</li>
         <li>Create a blank html shell in a document called "assign1.html". This should have all of
             the important containers that you see on this page.</li>
