--- a/33.forms.html
+++ b/33.forms.html
@@ -4,14 +4,14 @@
         <title>Adding form Elements</title>
         <style>
             input.stbut {
-                border: 2px solid black;
+                border: 4px double black;
                 border-radius: 8px;
                 padding: 5px;
                 background-color: #ddee33;
                 box-shadow: 4px 3px 8px #888888;
             }
             input.stbut:active {
-                background-color: #bbcc11;
+                background-color: #aabb00;
                 
             }
             input.stbut:focus {
@@ -38,7 +38,7 @@
         <p>Note that form elements do not have to be container tags.  In fact, with new javascript and css, they actually don't even have to be
             form elements, but we continue to use form tags as they are a good starting point that helps us keep the names and functions associated.
         </p>
-        <input type="text" value="This is a text input"><br>
+        <input type="date" value="This is a text input"><br>
         <input type="button" value="This is a button"><br>
         <input type="checkbox">This is a checkbox.<br>
         <input type="radio">This is a radio button<br>
