--- a/39.otherValues.html
+++ b/39.otherValues.html
@@ -27,6 +27,7 @@
         console.log("\n\nDisplaying Checkbox and Radiobox states")
         console.log(document.getElementById("check").checked)
         console.log(document.getElementById("radio").checked)
+        console.log("note that the values are read as either true or false and not \"true\" or \"false\".  These are boolean values")
     }
 
     function getNumber() {
