--- a/36.input.html
+++ b/36.input.html
@@ -9,8 +9,8 @@
         // creates errors trying to reference objects that are not defined until later on.
 
         // Code Sample #1
-        var promptButton = document.getElementById("promptButton")
-        promptButton.addEventListener('click', getPrompt);
+        var x = document.getElementById("promptButton")
+        x.addEventListener('click', getPrompt);
 
         function getPrompt(e) {
             var data = prompt("Enter some data");
