--- a/34.divs.html
+++ b/34.divs.html
@@ -40,10 +40,11 @@
 
         div#second {
             position: absolute;
-            top: 70px;
+            top: 7px;
             width: 120px;
             left: 5px;
             border: 2px double pink;
+            background-color: white;
         }
 
         div#third {
@@ -61,7 +62,7 @@
         }
 
         button {
-            background-color: #ffffbb;
+            background-color: #ccae6d;
         }
     </style>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -151,3 +152,4 @@
     </div>
 
 </body>
+</html>
